--- a/bookrec/templates/bookrec/index.html
+++ b/bookrec/templates/bookrec/index.html
@@ -14,14 +14,14 @@
     <br><br>
     <p>
         Imagine you are a big fan of science-fiction books and are currently looking for a new book to read. You've already read
-        <a href="https://www.goodreads.com/book/show/543082.Frankenstein" target="_blank">Frankenstein</a>,
-        <a href="https://www.goodreads.com/book/show/4541271-foundation" target="_blank">Foundation</a>,
-        <a href="https://www.goodreads.com/book/show/8493755-the-stars-my-destination" target="_blank">The Stars my Destination</a>,
-        <a href="https://www.goodreads.com/book/show/18747125-solaris" target="_blank">Solaris</a>,
-        <a href="https://www.goodreads.com/book/show/1685995.Dune" target="_blank">Dune</a>,
-        <a href="https://www.goodreads.com/book/show/16690.The_Moon_is_a_Harsh_Mistress" target="_blank">The Moon is a Harsh Mistress</a>,
-        <a href="https://www.goodreads.com/book/show/9732198-hyperion" target="_blank">Hyperion</a>, and
-        <a href="https://www.goodreads.com/book/show/3338617-jurassic-park" target="_blank">Jurassic Park</a>. You gave them each a good rating (4-5 stars).
+        <a href="https://www.goodreads.com/book/show/543082.Frankenstein" target="_blank" data-title="Frankenstein Goodreads">Frankenstein</a>,
+        <a href="https://www.goodreads.com/book/show/4541271-foundation" target="_blank" data-title="Foundation Goodreads">Foundation</a>,
+        <a href="https://www.goodreads.com/book/show/8493755-the-stars-my-destination" target="_blank" data-title="The Stars my Destination Goodreads">The Stars my Destination</a>,
+        <a href="https://www.goodreads.com/book/show/18747125-solaris" target="_blank" data-title="Solaris">Solaris</a>,
+        <a href="https://www.goodreads.com/book/show/1685995.Dune" target="_blank" data-title="Dune">Dune</a>,
+        <a href="https://www.goodreads.com/book/show/16690.The_Moon_is_a_Harsh_Mistress" target="_blank" data-title="The Moon is a Harsh Mistress">The Moon is a Harsh Mistress</a>,
+        <a href="https://www.goodreads.com/book/show/9732198-hyperion" target="_blank" data-title="Hyperion">Hyperion</a>, and
+        <a href="https://www.goodreads.com/book/show/3338617-jurassic-park" target="_blank" data-title="Jurassic Park">Jurassic Park</a>. You gave them each a good rating (4-5 stars).
         To assist you, you are using the help of different recommendation systems, each of which has created a <strong>top-10</strong> list for you.
         The first book in each list represents the system's best-fit recommendation.
         To access <strong>more details</strong>, simply click on the cover page of each book, which will open the respective GoodReads webpage in a new tab.
