--- a/bookrec/templates/bookrec/survey_page.html
+++ b/bookrec/templates/bookrec/survey_page.html
@@ -8,7 +8,7 @@
 
 {% block body_block %}
     <div class="container-scrollable">
-        <div class="scrollable-content left">
+        <div class="scrollable-content left" id="scrollable-lists">
             <div style="float:left; width: 50%">
                 <h3>List A (10 Books)</h3>
                 {% if books_a %}
