--- a/bookrec/templates/bookrec/base.html
+++ b/bookrec/templates/bookrec/base.html
@@ -88,7 +88,7 @@
                     // Send an AJAX request to log the event on the server
                     $.ajax({
                         type: "POST",
-                        url: "{% url 'bookrec_app:log_button_click' %}",  // Replace with your Django URL
+                        url: "{% url 'bookrec_app:logging' %}",  // Replace with your Django URL
                         data: { message: logMessage },
                         beforeSend: function(xhr, settings) {
                             xhr.setRequestHeader("X-CSRFToken", csrftoken);
