--- a/bookrec/templates/bookrec/base.html
+++ b/bookrec/templates/bookrec/base.html
@@ -18,7 +18,7 @@
     <body>
         <header class="header">
             <h1 class="header-title">Survey on User Perception of Differences in Book Recommender Algorithms</h1>
-            <a href="https://www.uni-koblenz.de/de/informatik" target="_blank"> <img src="../../../static/images/UK_FB4_Logo_eng_Schutzraum.png" alt="Logo" class="header-image" data-title="University Logo Header"></a>
+            <a href="https://www.uni-koblenz.de/de/informatik" target="_blank"> <img src="{% static 'images/UK_FB4_Logo_eng_Schutzraum.png' %}" alt="Logo" class="header-image" data-title="University Logo Header"></a>
         </header>
 
         <div class="container-main">
@@ -41,7 +41,7 @@
                     <p><a href="https://md.ekstrandom.net/static/pubs/listcmp.pdf" target="_blank" data-title="Source Ekstrand">Research inspired by</a></p>
                 </div>
                 <div class="footer-image">
-                    <a href="https://www.uni-koblenz.de/de/informatik/west/" target="_blank"> <img src="../../../static/images/UK_Pfeil_CMYK.png" alt="Image Description" data-title="University Arrow Footer"></a>
+                    <a href="https://www.uni-koblenz.de/de/informatik/west/" target="_blank"> <img src="{% static 'images/UK_Pfeil_CMYK.png' %}" alt="Image Description" data-title="University Arrow Footer"></a>
                 </div>
             </div>
         </footer>
