--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -9,11 +9,11 @@ Thank You
 {% block body_block %}
     <div class="center-container">
         <h1>Thank You for Taking the Survey!</h1>
-    </div>
+    </div> <br>
     <div class="center-container">
     <p>
-        If you're willing to contribute further to the study, you can participate again by clicking the button below.
-        You will, of course, be presented with a different set of recommendations.
+        If you're willing to contribute further to the study, you can <strong>participate again</strong> by clicking the button below.
+        You will, of course, be presented with a <strong>different set of recommendations</strong>.
     </p>
     </div><br>
     <div class="center-container">
