--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -25,5 +25,12 @@ Thank You
                 data-title="Back to Survey Thank You">
             Survey
         </button>
+    <br><br>
+    <div class="center-container">
+        The following code gives you credits that can be used to get free research participants at SurveySwap.io. <br>
+ 
+        Go to: https://surveyswap.io/sr/E05H-NTPL-JX6Y <br>
+ 
+        Or, alternatively, enter the code manually: E05H-NTPL-JX6Y
     </div>
 {% endblock %}
