--- a/bookrec/templates/bookrec/index.html
+++ b/bookrec/templates/bookrec/index.html
@@ -16,7 +16,9 @@
         maintaining your privacy and confidentiality throughout the study.
         Upon submitting your data, you will be redirected to a detailed description of the research scenario.
         Your input is highly appreciated, and we look forward to gaining valuable insights from your responses.
-    </p>
+    </p><br><br>
+    P.S.: This survey contains credits to get free survey responses at SurveySwap.io
+    <br><br>
     <form method="POST">
         {% csrf_token %}
         {{ demographic_form|crispy }}
