--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -26,4 +26,7 @@ Thank You
             Survey
         </button>
     </div>
+    <div class="center-container">
+        If you came from Prolific: Copy and Paste Code: C14AAWRB
+    </div>
 {% endblock %}
