--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -27,6 +27,6 @@ Thank You
         </button>
     </div>
     <div class="center-container">
-        If you came from Prolific: Copy and Paste Code: C14AAWRB
+        For SurveyCircle users (www.surveycircle.com): The Survey Code is: ZZFA-ZCQ2-HQTY-BRP7
     </div>
 {% endblock %}
