--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -27,6 +27,6 @@ Thank You
         </button>
     </div>
     <div class="center-container">
-        For SurveyCircle users (www.surveycircle.com): The Survey Code is: ZZFA-ZCQ2-HQTY-BRP7
+        Redeem Survey Code with one click: <a target="_blank" href="https://www.surveycircle.com/ZZFA-ZCQ2-HQTY-BRP7/">https://www.surveycircle.com/ZZFA-ZCQ2-HQTY-BRP7/</a>
     </div>
 {% endblock %}
