--- a/bookrec/templates/bookrec/thank_you.html
+++ b/bookrec/templates/bookrec/thank_you.html
@@ -28,5 +28,8 @@ Thank You
     </div>
     <div class="center-container">
         Redeem Survey Code with one click: <a target="_blank" href="https://www.surveycircle.com/ZZFA-ZCQ2-HQTY-BRP7/">https://www.surveycircle.com/ZZFA-ZCQ2-HQTY-BRP7/</a>
+    </div> <br>
+    <div class="center-container">
+        Prolific Copy and Paste Code: C14AAWRB
     </div>
 {% endblock %}
