--- a/bookrec/templates/bookrec/base.html
+++ b/bookrec/templates/bookrec/base.html
@@ -37,7 +37,7 @@
                 <div class="footer-content">
                     <p>&copy; 2023 Clemens Steinmann</p>
                     <p>Contact: csteinmann@uni-koblenz.de</p>
-                    <p><a href="https://md.ekstrandom.net/static/pubs/listcmp.pdf" target="_blank" data-title="Source Ekstrand">Research inspired by</a></p>
+                    <p><a href="https://md.ekstrandom.net/pubs/listcmp" target="_blank" data-title="Source Ekstrand">Research inspired by</a></p>
                 </div>
                 <div class="footer-image">
                     <a href="https://www.uni-koblenz.de/de/informatik/west/" target="_blank"> <img src="{% static 'images/UK_Pfeil_CMYK.png' %}" alt="Image Description" data-title="University Arrow Footer"></a>
